// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<label
  className="Switch__Label-sc-11hx91j-1 hjsgTd"
>
  <input
    checked={true}
    className="Switch__Input-sc-11hx91j-2 iTQgpQ"
    id="test-switch-1"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    checked={true}
    className="Switch__Slider-sc-11hx91j-0 crMCNs"
  />
</label>
`;

exports[`Switch renders RTL 1`] = `
<div
  dir="rtl"
>
  <label
    className="Switch__Label-sc-11hx91j-1 hjsgTd"
  >
    <input
      checked={true}
      className="Switch__Input-sc-11hx91j-2 iTQgpQ"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="Switch__Slider-sc-11hx91j-0 crMCNs"
    />
  </label>
</div>
`;

exports[`Switch renders Theme variant 1`] = `
<label
  className="Switch__Label-sc-11hx91j-1 hjsgTd"
>
  <input
    checked={true}
    className="Switch__Input-sc-11hx91j-2 jrWCuJ"
    id="test-switch-1"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    checked={true}
    className="Switch__Slider-sc-11hx91j-0 fTpROi"
  />
</label>
`;

exports[`Switch renders Theme variant with Caption 1`] = `
<div
  className="Inline-sc-1rz1cju-0 jSAmXO"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <span
    checked={true}
    className="Caption-sc-1jvwbix-0 Switch__SwitchCaption-sc-11hx91j-3 cqMrcf jgulfy"
    color="bulma.100"
  >
    AM
  </span>
  <label
    className="Switch__Label-sc-11hx91j-1 hjsgTd"
  >
    <input
      checked={true}
      className="Switch__Input-sc-11hx91j-2 jrWCuJ"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="Switch__Slider-sc-11hx91j-0 fTpROi"
    />
  </label>
  <span
    checked={false}
    className="Caption-sc-1jvwbix-0 Switch__SwitchCaption-sc-11hx91j-3 cqMrcf oDLcG"
    color="bulma.100"
  >
    PM
  </span>
</div>
`;

exports[`Switch renders different Sizes 1`] = `
<div
  className="flex gap-20 items-center"
>
  <label
    className="Switch__Label-sc-11hx91j-1 fMXVJH"
    size="xs"
  >
    <input
      checked={true}
      className="Switch__Input-sc-11hx91j-2 cGhERr"
      id="test-switch-1"
      onChange={[Function]}
      size="xs"
      type="checkbox"
    />
    <span
      checked={true}
      className="Switch__Slider-sc-11hx91j-0 crMCNs"
    />
  </label>
  <label
    className="Switch__Label-sc-11hx91j-1 Yfzhg"
    size="md"
  >
    <input
      checked={true}
      className="Switch__Input-sc-11hx91j-2 cGhERr"
      id="test-switch-2"
      onChange={[Function]}
      size="md"
      type="checkbox"
    />
    <span
      checked={true}
      className="Switch__Slider-sc-11hx91j-0 crMCNs"
    />
  </label>
  <label
    className="Switch__Label-sc-11hx91j-1 chjwYt"
    size="lg"
  >
    <input
      checked={true}
      className="Switch__Input-sc-11hx91j-2 cGhERr"
      id="test-switch-3"
      onChange={[Function]}
      size="lg"
      type="checkbox"
    />
    <span
      checked={true}
      className="Switch__Slider-sc-11hx91j-0 crMCNs"
    />
  </label>
</div>
`;

exports[`Switch renders with Caption 1`] = `
<div
  className="Inline-sc-1rz1cju-0 jSAmXO"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <span
    checked={true}
    className="Caption-sc-1jvwbix-0 Switch__SwitchCaption-sc-11hx91j-3 cqMrcf jgulfy"
    color="bulma.100"
  >
    OFF
  </span>
  <label
    className="Switch__Label-sc-11hx91j-1 hjsgTd"
  >
    <input
      checked={true}
      className="Switch__Input-sc-11hx91j-2 iTQgpQ"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="Switch__Slider-sc-11hx91j-0 crMCNs"
    />
  </label>
  <span
    checked={false}
    className="Caption-sc-1jvwbix-0 Switch__SwitchCaption-sc-11hx91j-3 cqMrcf oDLcG"
    color="bulma.100"
  >
    ON
  </span>
</div>
`;
